Spacing Fixes - May Need more

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -130,17 +130,18 @@ a.color:hover {
   color: white !important;
 }
 .button {
-  padding: 5px 15px;
+  padding: 3px 15px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
   vertical-align: middle;
   text-align: center;
-  margin: 5px 10px;
+  margin: 6px 15px;
   text-decoration: none !important;
   border: 2px solid #0e5096;
   color: #f5f5f5;
   background: #0e5096;
+  box-shadow: 0 0 3px 1px rgba(60, 60, 60, 0.2);
 }
 .button:hover {
   background: #f5f5f5;
@@ -153,8 +154,6 @@ a.color:hover {
   background: #0e4785;
   color: #f5f5f5;
 }
-
-
 
 
 ul.dash {
